--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
-web:
-  build: .
-  volumes:
-    - .:/apps/study
-  command: sh -c 'bundle check || bundle install'
-  dns:
-    - 192.168.30.1
-    - 8.8.8.8
-  environment:
-    - BUNDLE_PATH=/bundle_cache
-  volumes_from:
-    - bundle_cache
+version: '2'
 
-bundle_cache:
-  image: busybox
-  volumes:
-    - /bundle_cache
+services:
+  web:
+    build: .
+    volumes:
+      - .:/apps/study
+      - bundle_cache:/bundle_cache
+    command: sh -c 'bundle install'
+    dns:
+      - 192.168.39.1
+      - 8.8.8.8
+
+volumes:
+  bundle_cache:
